--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,3 @@
-:root {
-  color-scheme: light; /* Prevent system dark mode adjustments */
-}
-
 body {
   font-family: 'Garamond', serif;
   user-select: none;
@@ -101,18 +97,53 @@ body {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva,
     Verdana, sans-serif;
   font-size: 1.4rem;
-  color: rgba(230, 230, 250, 1);
-  text-shadow: 0 0 7px rgba(0, 191, 255, 0.8), 0 0 5px rgba(255, 20, 147, 0.7),
-    0 0 2px rgba(57, 255, 20, 0.6); /* Vibrant gradient glow */
 }
 
 .para1 {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva,
     Verdana, sans-serif;
-  font-size: 1.rem;
+  font-size: 1rem;
+}
+
+.blue-p {
   color: rgba(230, 230, 250, 1);
   text-shadow: 0 0 7px rgba(0, 191, 255, 0.8), 0 0 5px rgba(255, 20, 147, 0.7),
     0 0 2px rgba(57, 255, 20, 0.6); /* Vibrant gradient glow */
+}
+
+.blue-m {
+  color: rgba(230, 230, 250, 1);
+  text-shadow: 0 0 2px rgba(0, 191, 255, 0.8), 0 0 2px rgba(255, 20, 147, 0.7),
+    0 0 2px rgba(57, 255, 20, 0.6); /* Vibrant gradient glow */
+}
+.pink-p {
+  color: rgba(230, 230, 250, 1);
+  text-shadow: 0 0 7px rgba(255, 105, 180, 0.8), /* Pink */ 0 0 5px rgba(128, 0, 128, 0.7),
+    /* Purple */ 0 0 2px rgba(255, 255, 0, 0.6); /* Yellow */
+}
+
+.pink-m {
+  color: rgba(230, 230, 250, 1);
+  text-shadow: 0 0 2px rgba(255, 105, 180, 0.8), /* Pink */ 0 0 2px rgba(128, 0, 128, 0.7),
+    /* Purple */ 0 0 2px rgba(255, 255, 0, 0.6); /* Yellow */
+}
+
+.purple-p {
+  color: rgba(230, 230, 250, 1);
+  text-shadow: 0 0 15px rgba(138, 43, 226, 0.9), 0 0 10px rgba(148, 0, 211, 0.8),
+    0 0 5px rgba(186, 85, 211, 0.7);
+}
+
+.orange-p {
+  color: rgba(230, 230, 250, 1);
+  text-shadow: 0 0 2px rgba(255, 165, 0, 0.8), /* Orange */ 0 0 2px rgba(255, 0, 0, 0.7),
+    /* Red */ 0 0 2px rgba(255, 255, 0, 0.6); /* Yellow */
+}
+
+.green-p {
+  color: rgba(230, 230, 250, 1);
+  text-shadow: 0 0 10px rgba(30, 109, 17, 0.9), 0 0 8px rgba(27, 48, 40, 0.8),
+    0 0 5px rgba(94, 123, 94, 0.7);
 }
 
 /* Dropdown styles */
