--- a/styles.css
+++ b/styles.css
@@ -105,7 +105,7 @@ body {
   font-size: 1rem;
 }
 
-.blue-p {
+.para.blue-p {
   color: rgba(230, 230, 250, 1);
   text-shadow: 0 0 7px rgba(0, 191, 255, 0.8), 0 0 5px rgba(255, 20, 147, 0.7),
     0 0 2px rgba(57, 255, 20, 0.6); /* Vibrant gradient glow */
