--- a/styles.css
+++ b/styles.css
@@ -111,6 +111,12 @@ body {
     0 0 2px rgba(57, 255, 20, 0.6); /* Vibrant gradient glow */
 }
 
+.para1.blue-p {
+  color: rgba(230, 230, 250, 1);
+  text-shadow: 0 0 7px rgba(0, 191, 255, 0.8), 0 0 5px rgba(255, 20, 147, 0.7),
+    0 0 2px rgba(57, 255, 20, 0.6); /* Vibrant gradient glow */
+}
+
 .blue-m {
   color: rgba(230, 230, 250, 1);
   text-shadow: 0 0 2px rgba(0, 191, 255, 0.8), 0 0 2px rgba(255, 20, 147, 0.7),
