--- a/styles.css
+++ b/styles.css
@@ -99,19 +99,28 @@ body {
   font-size: 1.4rem;
 }
 
+.para1-b {
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva,
+    Verdana, sans-serif;
+  color: rgba(230, 230, 250, 1);
+  text-shadow: 0 0 7px rgba(0, 191, 255, 0.8), 0 0 5px rgba(255, 20, 147, 0.7),
+    0 0 2px rgba(57, 255, 20, 0.6); /* Vibrant gradient glow */
+  font-size: 1rem;
+}
+
 .para1 {
   font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva,
     Verdana, sans-serif;
   font-size: 1rem;
 }
 
-.para.blue-p {
+.blue-p {
   color: rgba(230, 230, 250, 1);
   text-shadow: 0 0 7px rgba(0, 191, 255, 0.8), 0 0 5px rgba(255, 20, 147, 0.7),
     0 0 2px rgba(57, 255, 20, 0.6); /* Vibrant gradient glow */
 }
 
-.para.blue-m {
+.blue-m {
   color: rgba(230, 230, 250, 1);
   text-shadow: 0 0 2px rgba(0, 191, 255, 0.8), 0 0 2px rgba(255, 20, 147, 0.7),
     0 0 2px rgba(57, 255, 20, 0.6); /* Vibrant gradient glow */
@@ -130,7 +139,7 @@ body {
 
 .purple-p {
   color: rgba(230, 230, 250, 1);
-  text-shadow: 0 0 12px rgba(138, 43, 226, 0.9), 0 0 10px rgba(148, 0, 211, 0.8),
+  text-shadow: 0 0 15px rgba(138, 43, 226, 0.9), 0 0 10px rgba(148, 0, 211, 0.8),
     0 0 5px rgba(186, 85, 211, 0.7);
 }
 
