--- a/styles.css
+++ b/styles.css
@@ -177,7 +177,7 @@ body {
 .dropdown-text {
   max-height: 0; /* Start with no height */
   overflow: hidden; /* Hide text when not visible */
-  transition: max-height 0.1s ease-out; /* Smooth transition for sliding down */
+  transition: max-height 0.5s ease-in-out, padding 0.5s ease-in-out; /* Smooth transition for sliding down */
 
   padding: 0 1rem;
 }
@@ -208,7 +208,7 @@ body {
 
 .custom-table-class th,
 .custom-table-class td {
-  padding: 0.65rem; /* Cell padding */
+  padding: 0.75rem; /* Cell padding */
   border: 1px solid rgba(230, 230, 250, 0.5); /* Border with custom color */
 }
 
