--- a/styles.css
+++ b/styles.css
@@ -211,3 +211,22 @@ body {
 .custom-table-class th {
   font-weight: bold;
 }
+
+.logo-size {
+  width: 5rem;
+  height: 5rem;
+}
+
+@media (max-width: 768px) {
+  .logo-size {
+    width: 5.5rem;
+    height: 5.5rem;
+  }
+}
+
+@media (max-width: 576px) {
+  .logo-size {
+    width: 6rem;
+    height: 6rem;
+  }
+}
